# fuck-discord

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-desktop-app/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/: app.css  app.html
client/src/lib/: config.ts  notifications.ts
client/src/lib/components/: ChannelHeader.svelte  LoginForm.svelte  MemberList.svelte  Message.svelte  MessageInput.svelte  MessageList.svelte  SearchPanel.svelte  Sidebar.svelte
client/src/lib/protocol/: types.ts
client/src/lib/stores/: auth.svelte.ts  channels.svelte.ts  connection.svelte.ts  members.svelte.ts  messages.svelte.ts
client/src/lib/utils/: markdown.ts  time.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/app/: +layout.svelte  +page.svelte
client/src/routes/app/[channelId]/: +page.svelte
server/: Cargo.toml  relay.default.toml
server/migrations/: 001_initial.sql  002_reactions.sql  003_invites_fk.sql  004_invites_nullable_created_by.sql
server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
server/src/auth/: invite.rs  middleware.rs  mod.rs  password.rs  session.rs
server/src/crypto/: mod.rs
server/src/db/: channels.rs  invites.rs  messages.rs  mod.rs  reactions.rs  users.rs
server/src/handlers/: auth.rs  channels.rs  messages.rs  mod.rs  uploads.rs  users.rs
server/src/ws/: handler.rs  protocol.rs
server/tests/: auth.rs  channels.rs  messages.rs  websocket.rs
server/tests/common/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
