[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"
description = "Self-hosted encrypted chat server"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
rusqlite = { version = "0.32", features = ["bundled-full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Auth
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Embed static files
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tempfile = "3"
futures = "0.3"
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
ulid = "1"
rusqlite = { version = "0.32", features = ["bundled-full"] }
